--- a/src/app/forgetPassword/forgetPassword.component.html
+++ b/src/app/forgetPassword/forgetPassword.component.html
@@ -1,24 +1,23 @@
 <div class="text-center text-uppercase margin-top"></div>
 <div class="login-background"></div>
 <div class="form-wall">
-    <form class="form-signin  materialize clearfix"
-    [formGroup]="loginform"
-    (ngSubmit)="login()">
+    <form class="form-signin  materialize clearfix">
+            <!-- [formGroup]="forgetPasswordform"
+            (ngSubmit)="forgetPassword()" -->
         <div class="col-md-12 center">
             <img src="../assets/img/MCR-logo-EDIT.png" class="login-logo"  alt="">
+        </div>
+        <div class="col-md-12 mg-btm-1">
+            <label for="username" class="md-label">Enter your email address and press submit to receive a reset-password link via email</label>
         </div>
         <div class="col-md-12">
             <input type="email" class="form-control" formControlName="username" name="username" placeholder=" " required>
             <label for="username" class="md-label">Email</label>
         </div>
         <div class="col-md-12">
-            <input type="password" class="form-control" formControlName="password" name="password" placeholder=" " required>
-            <label for="password" class="md-label">Password</label>
-        </div>
-        <div class="col-md-12">
-            <button class="btn btn-block btn-lg btn-primary theme">Sign in</button>
+            <button class="btn btn-block btn-lg btn-primary theme">Send</button>
             <div class="center forget-password">
-                <a (click)="forgetPassword()">Forget your password?</a>
+                <a (click)="signIn()">Return to main login screen</a>
             </div>
         </div>
     </form>
