Modify some css

--- a/src/app/confirmPassword/confirmPassword.component.html
+++ b/src/app/confirmPassword/confirmPassword.component.html
@@ -13,11 +13,11 @@
             then press the [Submit] button.</label>
         </div>
         <div class="col-md-12">
-            <input type="password" class="form-control" formControlName="password" name="password" placeholder=" " required>
+            <input type="password" class="form-control" name="password" placeholder=" " required>
             <label for="password" class="md-label">Password</label>
         </div>
         <div class="col-md-12">
-            <input type="password" class="form-control" formControlName="confirmPassword" name="confirmPassword" placeholder=" " required>
+            <input type="password" class="form-control" name="confirmPassword" placeholder=" " required>
             <label for="password" class="md-label">Confirm Password</label>
         </div>
         <div class="col-md-12">
