--- a/src/app/forgetPassword/forgetPassword.component.html
+++ b/src/app/forgetPassword/forgetPassword.component.html
@@ -11,7 +11,7 @@
             <label for="username" class="md-label">Enter your email address and press submit to receive a reset-password link via email</label>
         </div>
         <div class="col-md-12">
-            <input type="email" class="form-control" formControlName="username" name="username" placeholder=" " required>
+            <input type="email" class="form-control" name="username" placeholder=" " required>
             <label for="username" class="md-label">Email</label>
         </div>
         <div class="col-md-12">
