--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1080,11 +1080,14 @@ a.no_style { /*ui-sref-if dicrective css class*/
     display: block;
     border: none;
     padding: 10px 0;
-    border-bottom: solid 1px #009688;
+    /* border-bottom: solid 1px #009688; */
+    border-bottom: solid 1px #007bff;
     -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
     transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #009688 4%);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #009688 4%);
+    /* background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #009688 4%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #009688 4%); */
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 96%, #007bff 4%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #007bff 4%);
     background-position: -1000px 0;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -1105,7 +1108,8 @@ a.no_style { /*ui-sref-if dicrective css class*/
 .materialize input[type=text][readonly].form-control ~ .md-label{
     top: -20px;
     font-size: 12px;
-    color: #009688;
+    /* color: #009688; */
+    color: #007bff;
 }
 .materialize input.form-control {
     outline: none;
