--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     [formGroup]="loginform"
     (ngSubmit)="login()">
         <div class="col-md-12 center">
-            <img src="../assets/img/MCR-logo-EDIT.png" class="login-logo"  alt="">
+            <img src="../assets/img/MCR-logo-EDIT.png" class="login-logo mg-btm-4"  alt="">
         </div>
         <div class="col-md-12">
             <input type="email" class="form-control" formControlName="username" name="username" placeholder=" " required>
