--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -23,16 +23,21 @@
 }
 
 .mg-btm-1 {
-    margin-bottom: 75px !important;
+    margin-bottom: 95px !important;
 }
 
 .mg-btm-2 {
-    margin-bottom: 100px !important;
+    margin-bottom: 110px !important;
 }
 
 .mg-btm-3 {
     margin-bottom: 0px !important;
 }
+
+.mg-btm-4 {
+    margin-bottom: 20px;
+}
+
 /**** MCR STYLE ****/
 
 a {
@@ -1116,6 +1121,7 @@ a.no_style { /*ui-sref-if dicrective css class*/
   height: 70px;
   margin-top: 30px;
 }
+
 .materialize { position: relative;}
 .materialize .md-label {
     color: #999;
